# htmltdcnt

./: .gitignore  CMakeLists.txt  README.md  create_Xcode_project.sh
.github/workflows/: cmake.yml  codacy-analysis.yml  codeql-analysis.yml  macos.yml  shiftleft-analysis.yml
man/man1/: htmltdcnt.1
src/: CMakeLists.txt  config.h.in  htmltdcnt.cpp
